# pardiso-wrapper-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
examples/: symmetric.rs
src/: enums.rs  error_types.rs  lib.rs
src/mkl/: ffi.rs  interface.rs  loader.rs  mod.rs
src/panua/: ffi.rs  interface.rs  loader.rs
src/tests/: api.rs  libloading.rs  mod.rs  pardisoinit.rs  symmetric.rs
