[package]
name = "pardiso-wrapper"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
description = "Wrappers for MKL and Panua Pardiso dynamic libraries"

[lib]
name = "pardiso_wrapper"
crate-type = ["rlib"]

[dependencies]
cfg-if = "1.0.0"
lazy_static = "1.5.0"
libloading = "0.8.6"
num_enum = "0.7.3"
thiserror = "2.0.12"
which = "7.0.3"

[features]
default = []
panua = []
mkl = []

# "docs" feature will bypass platform checks and allow the library
# to be built for all platforms, even if mkl won't actually work
# on non x86_64 platforms.
docs = []

[dev-dependencies]
approx = "0.5"

[[example]]
name = "symmetric"
path = "examples/symmetric.rs"
required-features = ["mkl"]

